[package]
name = "proxymate"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jaroslav Beran <jara.beran@gmail.com>"]

[dependencies]
async-std = "1.12.0"
async-tls = "0.12.0"
async-tungstenite = "0.22"
ws_stream_tungstenite = "0.10"
futures = "0.3.28"
structopt = "0.3.26"
rustls-pemfile = "1.0"
rustls = "0.20.6"
log = "0.4.19"
env_logger ="0.10"
