[package]
name = "proxymate"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Jaroslav Beran <jara.beran@gmail.com>"]

[dependencies]
async-std = "1.13"
async-tls = { git = "https://github.com/j4r0u53k/async-tls.git", branch = "update-rustls-0-23", version = "0.14" }
async-tungstenite = "0.28"
ws_stream_tungstenite = "0.14"
futures = "0.3.31"
structopt = "0.3.26"
rustls-pemfile = "2.2"
rustls = "0.23"
log = "0.4"
env_logger ="0.11"
